--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
-    <p>tét 1</p>
-    <p>A new line in our file!</p>
+    <p>test pulll branch</p>
 
 
     <p>nhah2222</p>
